# third-party-functions

./: .gitattributes  .gitignore  README.md  pyproject.toml
Functions in the auditory domain/Hilbert_Envelope/: Hilbert_Envelope.m
Functions in the visual domain/BRISCAM09/: BRISCAM09.m
Functions in the visual domain/CIELAB/: CIELAB.m
auditory_stream/Time_Varying_Loudness_2016/: tv2016.m
auditory_stream/Time_Varying_Loudness_2016/tv2016/: FilteredSignal2MonauralInstantaneousSpecificLoudness.m  InstantaneousSpecificLoudness2ShortTermSpecificLoudness.m  MonauralSpecificLoudness2BinauralLoudness025.m  ReadAndResample.m  ShortTermLoudness2LongTermLoudness.m  SoundField2Cochlea.m
tactile_stream/: Saal_et_al_2017_1D.py  Saal_et_al_2017_simplified.py
tactile_stream/input/: LH_thumb_stimulus_short.csv
visual_stream/colour-estimation/CIECAM02/: CIECAM02.m
visual_stream/colour-estimation/CIELAB/: CIELAB.m
visual_stream/optic-flow-estimation/: DemoEstimateOpticFlowSingleLayer_our_stim.m  README.md  load_our_stim.m  stream_our_stim.m
visual_stream/optic-flow-estimation/+AdelsonBergen/: estimateOpticFlow2D.m
visual_stream/optic-flow-estimation/+Heeger/: DemoEstimateOpticFlow2D.m  combine_pyramid_layers.m  estimateOpticFlow2D.m
visual_stream/optic-flow-estimation/+HornSchunck/: DemoEstimateOpticFlow2D.m  copyBoundary.m  eliminateBoundary.m  estimateOpticFlow2D.m  repeatBoundary.m
visual_stream/optic-flow-estimation/MotaEtAl/: DemoEstimateOpticFlow2D.m
visual_stream/optic-flow-estimation/andy-version/: DemoEstimateOpticFlowSingleLayer_our_stim.m  modelEnergy.m  (+4 more)
(+28 files in other folders)
