[project]
name = "third-party-functions"
version = "0.1.0"
description = ""
authors = [{name = "neukym",email = "acgt2@cam.ac.uk"}]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
numpy = "^2.3.1"
scipy = "^1.16.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
